--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,10 @@
 </main>
 <footer>
-    <p>&copy; 2025 Oxy Blog. All Rights Reserved.</p>
+    <p>&copy; 2025 OxyLoop. All Rights Reserved.</p>
+    <div class="social-links">
+        <a href="https://github.com/OxyLoop/">GitHub</a> 
+        
+    </div>
 </footer>
 </body>
 </html>
