--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -2,15 +2,21 @@
 
 <h1>All Blog Posts</h1>
 
-<% if (posts.length === 0) { %>
-    <p>No posts yet. <a href="/create">Create one</a>!</p>
-<% } else { %>
-    <% posts.forEach(post => { %>
-        <div class="post">
-            <h2><%= post.title %></h2>
-            <p><%= post.content %></p>
-        </div>
-    <% }); %>
-<% } %>
+<div class="posts-grid">
+    <% if (posts.length === 0) { %>
+        <p>No posts yet. <a href="/create">Create one</a>!</p>
+    <% } else { %>
+        <% posts.forEach((post, index) => { %>
+            <div class="post-box">
+                <h2><%= post.title %></h2>
+                <p class="post-content">
+                    <%= post.content.length > 200 ? post.content.substring(0, 200) + "..." : post.content %>
+                </p>
+                <a href="/post/<%= index %>" class="read-more">Read More</a>
+            </div>
+        <% }); %>
+    <% } %>
+</div>
 
 <%- include("partials/footer.ejs") %>
+
